--- a/Parcial03v2/Views/Registro.xaml
+++ b/Parcial03v2/Views/Registro.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Parcial03v2.Views.Registro">
+             x:Class="Parcial03v2.Views.Registro"
+             BackgroundImageSource="BG02.png">
     <ContentPage.Content>
 
         <Grid RowSpacing="0">
@@ -25,7 +26,7 @@
             </StackLayout>
 
             <StackLayout Grid.Row="2" HorizontalOptions="Center">
-                <Label Text ="Registro" TextColor="#40375c" HorizontalTextAlignment="Center" FontSize="Large" WidthRequest="300"/>
+                <Label Text ="Registro" TextColor="white" HorizontalTextAlignment="Center" FontSize="Large" WidthRequest="300"/>
 
 
             </StackLayout>
@@ -34,7 +35,7 @@
                 <Label
                     Text="Email"
                    
-                    TextColor="#5a4f7c"
+                    TextColor="white"
                     />
                 <Frame
                     HasShadow="true"
@@ -58,7 +59,7 @@
                 <Label
                     Text="Password"
                     FontSize="13"
-                    TextColor="#5a4f7c"
+                    TextColor="white"
                     />
 
                 <Frame
@@ -86,7 +87,7 @@
                 <Label
                      Text="Usuario"
                      FontSize="13"
-                     TextColor="#5a4f7c"/>
+                     TextColor="White"/>
 
                 <Frame
                      HasShadow="True"
