--- a/Parcial03v2/Views/Agregar Manga.xaml
+++ b/Parcial03v2/Views/Agregar Manga.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Parcial03v2.Views.ModificarPerfil"
-    BackgroundImageSource="BG03.png">
+             x:Class="Parcial03v2.Views.Agregar_Manga"
+             BackgroundImageSource="BG03.png">
     <ContentPage.Content>
         <ScrollView>
             <Grid RowSpacing="0" BackgroundColor="#CC000000 ">
