--- a/Parcial03v2/Views/AgregarSerie.xaml
+++ b/Parcial03v2/Views/AgregarSerie.xaml
@@ -1,12 +1,155 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Parcial03v2.Views.AgregarSerie">
+             x:Class="Parcial03v2.Views.AgregarSerie"
+             BackgroundImageSource="BG03.png">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView>
+            <Grid RowSpacing="0" BackgroundColor="#CC000000 ">
+                <Grid.RowDefinitions>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                    <RowDefinition   Height="Auto"/>
+                </Grid.RowDefinitions >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackLayout Grid.Row="1">
+                    <Image WidthRequest="0"
+                       HeightRequest="100"/>
+                </StackLayout>
+
+                <StackLayout Grid.Row="2" HorizontalOptions="Center">
+                    <Label Text ="Anime" TextColor="white" HorizontalTextAlignment="Center" FontSize="Large" WidthRequest="300"/>
+
+
+                </StackLayout>
+
+                <StackLayout Grid.Row="3" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10" >
+                    <Label
+                    Text="Nombre"
+                   
+                    TextColor="white"
+                    />
+                    <Frame
+                    HasShadow="true"
+                    Padding="6"
+                    CornerRadius="7"
+                    BackgroundColor="#292929">
+                        <Entry
+                    Placeholder="Samurai X"
+                    PlaceholderColor="White"
+                    
+                    MaxLength="25"
+                    FontSize="15"
+                    Text="{Binding EmailTxt, Mode=TwoWay}"
+                    IsEnabled="{Binding IsEnabledTxt}"
+                    TextColor="White"
+                     x:Name="a"       />
+                    </Frame>
+                </StackLayout>
+
+                <StackLayout Grid.Row="4" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10" >
+
+                    <Label
+                    Text="Animadora"
+                    FontSize="13"
+                    TextColor="white"
+                    />
+
+                    <Frame
+                     HasShadow="True"
+                     Padding="6"
+                     CornerRadius="7"
+                     BackgroundColor="#292929" 
+                    >
+
+                        <Entry
+                    Placeholder="Mad House"
+                    PlaceholderColor="White"
+                    MaxLength="25"
+                   
+                    FontSize="15"
+                    Text="{Binding PassTxt, Mode=TwoWay}"
+                    IsEnabled="{Binding IsEnabledTxt}"
+                    TextColor="White"
+                             x:Name="b"/>
+
+                    </Frame>
+
+                </StackLayout>
+
+                <StackLayout Grid.Row="5" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10">
+                    <Label
+                     Text="Creador"
+                     FontSize="13"
+                     TextColor="White"/>
+
+                    <Frame
+                     HasShadow="True"
+                     Padding="6"
+                     CornerRadius="7"
+                     BackgroundColor="#292929"
+                    >
+
+                        <Entry
+                    Placeholder="Nishio Ishin"
+                        PlaceholderColor="White"
+                    MaxLength="25"
+                    Keyboard="Text"
+                    FontSize="15"
+                    Text="{Binding NameTxt, Mode=TwoWay}"
+                    IsEnabled="{Binding IsEnabledTxt}"
+                    TextColor="White"
+                             x:Name="c"/>
+
+                    </Frame>
+                </StackLayout>
+
+                <StackLayout Grid.Row="6" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10" >
+                    <Label
+                    Text="Capitulos"
+                   
+                    TextColor="white"
+                    />
+                    <Frame
+                    HasShadow="true"
+                    Padding="6"
+                    CornerRadius="7" 
+                    BackgroundColor= "#292929" >
+                        <Entry
+                    Placeholder="19"
+                    PlaceholderColor="White"
+                    Keyboard="Numeric"
+                    MaxLength="2"
+                    FontSize="15"
+                    x:Name="d"
+                    Text="{Binding EmailTxt, Mode=TwoWay}"
+                    IsEnabled="{Binding IsEnabledTxt}"
+                    TextColor="White"/>
+
+                    </Frame>
+                </StackLayout>
+                <StackLayout Grid.Row="7" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10">
+                    <Frame Padding="0,4,0,4" HasShadow="True">
+                        <Button Text="Guardar cambios" 
+                            HeightRequest="35"
+                            WidthRequest="185" 
+                            BackgroundColor="Black"  
+                            TextColor="#f14235" 
+                            FontSize="15" 
+                            Command="{Binding RegistroCommand}"
+                            Clicked="cambios" />
+                    </Frame>
+                </StackLayout>
+
+            </Grid>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
