--- a/Parcial03v2/Views/ConfiguracionesGenerales.xaml
+++ b/Parcial03v2/Views/ConfiguracionesGenerales.xaml
@@ -42,22 +42,22 @@
                     Padding="6"
                     CornerRadius="7"
                     BackgroundColor="#292929">
-                        <Entry
-                    Placeholder="Español"
-                    PlaceholderColor="White"
-                    Keyboard="Email"
-                    MaxLength="25"
-                    FontSize="15"
-                    Text="{Binding EmailTxt, Mode=TwoWay}"
-                    IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                        <Picker x:Name="a" Title="Select">
+                            <Picker.Items>
+                                <x:String>Español</x:String>
+                                <x:String>Ingles</x:String>
+                                <x:String>Japones</x:String>
+                                <x:String>Portugues</x:String>
+
+                            </Picker.Items>
+                        </Picker>
                     </Frame>
                 </StackLayout>
 
                 <StackLayout Grid.Row="4" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10" >
 
                     <Label
-                    Text="Cambioar Contraseña"
+                    Text="Modo Oscuro"
                     FontSize="13"
                     TextColor="white"
                     />
@@ -69,15 +69,13 @@
                      BackgroundColor="#292929" 
                     >
 
-                        <Entry
-                    Placeholder="******************"
-                    PlaceholderColor="White"
-                    MaxLength="25"
-                    IsPassword="True"
-                    FontSize="15"
-                    Text="{Binding PassTxt, Mode=TwoWay}"
-                    IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                        <Picker x:Name="b" Title="Select">
+                            <Picker.Items>
+                                <x:String> Activado</x:String>
+                                <x:String> Desactivado</x:String>
+                                
+                            </Picker.Items> 
+                        </Picker>
 
                     </Frame>
 
@@ -85,7 +83,7 @@
 
                 <StackLayout Grid.Row="5" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10">
                     <Label
-                     Text="Cambiar Usuario"
+                     Text="Pais"
                      FontSize="13"
                      TextColor="White"/>
 
@@ -96,22 +94,22 @@
                      BackgroundColor="#292929"
                     >
 
-                        <Entry
-                    Placeholder="Perone"
-                        PlaceholderColor="White"
-                    MaxLength="25"
-                    Keyboard="Text"
-                    FontSize="15"
-                    Text="{Binding NameTxt, Mode=TwoWay}"
-                    IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                        <Picker x:Name="c" Title="Select">
+                            <Picker.Items>
+                                <x:String>El Salvador</x:String>
+                                <x:String>United States</x:String>
+                                <x:String>Panama</x:String>
+                                <x:String>Mexico</x:String>
+
+                            </Picker.Items>
+                        </Picker>
 
                     </Frame>
                 </StackLayout>
 
                 <StackLayout Grid.Row="6" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" Padding="10" >
                     <Label
-                    Text="Edad"
+                    Text="Numero de la Suerte"
                    
                     TextColor="white"
                     />
@@ -129,7 +127,8 @@
                    
                     Text="{Binding EmailTxt, Mode=TwoWay}"
                     IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                    TextColor="White"
+                             x:Name="d" />
 
                     </Frame>
                 </StackLayout>
