--- a/Parcial03v2/Views/LoginPage.xaml
+++ b/Parcial03v2/Views/LoginPage.xaml
@@ -61,7 +61,8 @@
                     FontSize="15"
                     Text="{Binding NameTxt, Mode=TwoWay}"
                     IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                    TextColor="White"
+                        x:Name="a"/>
 
                 </Frame>
             </StackLayout>
@@ -89,7 +90,8 @@
                     FontSize="15"
                     Text="{Binding PassTxt, Mode=TwoWay}"
                     IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                    TextColor="White"
+                        x:Name="b"/>
 
 
                 </Frame>
