--- a/Parcial03v2/Views/Registro.xaml
+++ b/Parcial03v2/Views/Registro.xaml
@@ -50,7 +50,8 @@
                     FontSize="15"
                     Text="{Binding EmailTxt, Mode=TwoWay}"
                     IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                    TextColor="White"
+                        x:Name="a"/>
                 </Frame>
             </StackLayout>
 
@@ -77,7 +78,8 @@
                     FontSize="15"
                     Text="{Binding PassTxt, Mode=TwoWay}"
                     IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                    TextColor="White"
+                        x:Name="b"/>
 
                 </Frame>
 
@@ -104,7 +106,8 @@
                     FontSize="15"
                     Text="{Binding NameTxt, Mode=TwoWay}"
                     IsEnabled="{Binding IsEnabledTxt}"
-                    TextColor="White"/>
+                    TextColor="White"
+                        x:Name="c"/>
 
                 </Frame>
             </StackLayout>
